--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "cars-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",  
   "scripts": {
+    "start": "node server.js",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
